typical register, login

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/diary
 spring.datasource.username=postgres
 spring.datasource.password=rony123456
-
+spring.jackson.serialization.write_dates_as_timestamps=false
 #
 #spring.datasource.initialization-mode=always
 #spring.datasource.initialize=true
